--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OpenAIFuncCallTest",
+  "name": "openai-func-call-test",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
